# melange-opam-template

./: .gitignore  CONTRIBUTING.md  Hello.ml  LICENSE  Main.re  Makefile  README.md  bsconfig.json  dune  dune-project  melange-examples.opam  melange-opam-template.opam  melange-opam-template.opam.template  package-lock.json  package.json
.githooks/: prepush
.github/workflows/: build-sample-project.yml
examples/1-node/: .gitignore  1-node.opam  Makefile  README.md  dune-project
examples/1-node/src/: dune  hello.ml
examples/1-node/src/world/: dune
examples/2-react/: 2-react.opam  Makefile  README.md  dune-project  package-lock.json
examples/2-react/src/: ReactApp.re  dune
examples/2-react/src/world/: dune
lib/: arit.ml  dune  my_lib.ml
lib2/: dune  my_lib2.ml  name.ml
patches/: reason-react+0.9.1.patch
src/: Hello.ml  Main.re  ReactApp.mlx  ReactApp.re  Speech.re  dune
src/world/: World.ml  dune
