(subdir
 node_modules
 (vendored_dirs reason-react)
 (dirs reason-react)
 (subdir
  reason-react
  (vendored_dirs src)
  (dirs src)
  (subdir
   src
   (include_subdirs unqualified)
   (library
    (name reason_react)
    (wrapped false)
    (flags :standard -bs-jsx 3)
    (modes melange)))))

(melange.emit
 (target output)
 (alias main)
 (entries hello main)
 (compile_flags :standard -bs-jsx 3)
 (libraries melange my_lib my_lib2 reactApp reason_react)
 (module_systems es6))
