(subdir
 node_modules
 (vendored_dirs reason-react)
 (dirs reason-react)
 (subdir
  reason-react
  (vendored_dirs src)
  (dirs src)
  (subdir
   src
   (include_subdirs unqualified)
   (library
    (name reason_react)
    (wrapped false)
    (flags :standard -bs-jsx 3)
    (modes melange)))))

(melange.emit
 (target output)
 (alias react)
 (libraries reactApp)
 (module_systems es6))

(melange.emit
 (target node)
 (alias node)
 (libraries hello_node)
 (module_systems commonjs))
