(lang dune 3.8)

(using melange 0.1)

(name melange-examples)

(license "MIT")

(maintainers <your_name>)

(authors <your_name>)

(homepage https://github.com/your/project)

(bug_reports https://github.com/your/project/issues)

(package
 (allow_empty)
 (name melange-examples)
 (synopsis "Melange examples")
 (description "A collection of examples and demo projects using Melange"))
