opam-version: "2.0"
synopsis: "Melange project"
description: "Minimal melange project"
maintainer: ["<your_name>"]
authors: ["<your_name>"]
license: "MIT"
homepage: "https://github.com/your/project"
bug-reports: "https://github.com/your/project/issues"
depends: [
  "ocaml" {>= "5.1.0"}
  "reason" {>= "3.10.0"}
  "dune" {>= "3.8"}
  "melange" {>= "2.0.0"}
  "reason-react" {>= "0.13.0"}
  "reason-react-ppx"
  "opam-check-npm-deps" {dev} # todo: use with-dev-setup once 2.2 is out
  "ocaml-lsp-server" {dev}
  "dot-merlin-reader" {dev}
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/your/project.git"
pin-depends: [
  [ "reason-react.dev"      "git+https://github.com/reasonml/reason-react.git#2e99c8ee87cefe241b698c191c74226da54cf9db" ]
  [ "reason-react-ppx.dev"  "git+https://github.com/reasonml/reason-react.git#2e99c8ee87cefe241b698c191c74226da54cf9db" ]
]
