opam-version: "2.0"
synopsis: "Melange project"
description: "Minimal melange project"
maintainer: ["<your_name>"]
authors: ["<your_name>"]
license: "MIT"
homepage: "https://github.com/your/project"
bug-reports: "https://github.com/your/project/issues"
depends: [
  "ocaml"
  "reason" {>= "3.13.0"}
  "dune" {>= "3.9"}
  "melange" {>= "4.0.0"}
  "reason-react" {>= "0.15.0"}
  "reason-react-ppx"
  "opam-check-npm-deps" {with-dev-setup}
  "ocaml-lsp-server" {with-dev-setup}
  "dot-merlin-reader" {with-dev-setup}
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/your/project.git"
